welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{if (x >= 13 && x <= 19) {true}
 ^loneTeen:9: error: Unmatched closing brace '}' ignored here
 }
 ^