welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
def condition()(x:Int):Boolean
{if (x >= 13 && x <= 19) {true}
else {false}}}

(condition a && !condition b) || (condition b && !condition a)
}
